// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoActiveContent should render correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 iRdLpd"
  >
    <div
      class="ant-space-item"
    >
      <svg
        class="styledComponents__GreenTickIcon-sc-m7jeli-3 bRCYfh"
        data-testid="CheckMarkCircleSolid"
      />
    </div>
  </div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 styledComponents__NoDataTextWrapper-sc-m7jeli-2 iRdLpd cMdQDn"
  >
    <div
      class="ant-space-item"
    >
      No active data
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoActiveContent should render correctly with the prop 1`] = `
<DocumentFragment>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 iRdLpd"
  >
    <div
      class="ant-space-item"
    >
      <svg
        class="styledComponents__GreenTickIcon-sc-m7jeli-3 bRCYfh"
        data-testid="CheckMarkCircleSolid"
      />
    </div>
  </div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 styledComponents__NoDataTextWrapper-sc-m7jeli-2 iRdLpd cMdQDn"
  >
    <div
      class="ant-space-item"
    >
      No data available
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoActiveData should render correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoDataWrapper-sc-m7jeli-0 bvtRvB"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 iRdLpd"
    >
      <div
        class="ant-space-item"
      >
        <svg
          class="styledComponents__GreenTickIcon-sc-m7jeli-3 bRCYfh"
          data-testid="CheckMarkCircleSolid"
        />
      </div>
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 styledComponents__NoDataTextWrapper-sc-m7jeli-2 iRdLpd cMdQDn"
    >
      <div
        class="ant-space-item"
      >
        No active data
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoActiveData should render correctly with the prop 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoDataWrapper-sc-m7jeli-0 bvtRvB"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 iRdLpd"
    >
      <div
        class="ant-space-item"
      >
        <svg
          class="styledComponents__GreenTickIcon-sc-m7jeli-3 bRCYfh"
          data-testid="CheckMarkCircleSolid"
        />
      </div>
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 styledComponents__NoDataTextWrapper-sc-m7jeli-2 iRdLpd cMdQDn"
    >
      <div
        class="ant-space-item"
      >
        No data available
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoData should render correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoDataWrapper-sc-m7jeli-0 bvtRvB"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 styledComponents__NoDataTextWrapper-sc-m7jeli-2 iRdLpd cMdQDn"
    >
      <div
        class="ant-space-item"
      >
        No data to display
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoData should render correctly with the prop 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoDataWrapper-sc-m7jeli-0 bvtRvB"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 styledComponents__NoDataTextWrapper-sc-m7jeli-2 iRdLpd cMdQDn"
    >
      <div
        class="ant-space-item"
      >
        No data available
      </div>
    </div>
  </div>
</DocumentFragment>
`;
